Fix editor border overlap

--- a/src/editor.less
+++ b/src/editor.less
@@ -61,7 +61,7 @@
     border: 1px solid var(--breeze-input-border);
     border-radius: 3px;
     transition: border-color 250ms ease-in-out;
-    margin: 0 4px 0 0 !important;
+    margin: 0 4px 1px 0 !important;
     
     &:hover,
     &:focus-within {
